added basic ui elements & structure, added basic ui styles

--- a/index.html
+++ b/index.html
@@ -16,14 +16,31 @@ Last Edited 2023/07/29
     <meta http-equiv = "X-UA-Compatible" content = "ie=edge"/>
     <link rel = "stylesheet" href = "./assets/reset.css">
     <link rel = "stylesheet" href = "./assets/style.css">
-    <link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Raleway">
+    <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap">
     <title>Timed Coding Quiz</title>
 
 </head>
 
 <body>
 
-    
+    <div class = "header">
+
+        <div id = "timer">Time: 0</div>
+        <div id = "HSLink">View high scores</div>
+
+    </div>
+
+    <div id = "quiz-content">
+
+        <div id = "start-menu">
+
+            <h1>Timed Coding Quiz</h1>
+            <p>See how quickly you can answer the following code-related questions. Note that incorrect answers will result in a 10-second time loss!</p>
+            <button class = "quiz-button">Start Quiz</button> 
+
+        </div>
+
+    </div>
 
     <script src = "./assets/script.js"></script>
 
