added js code to hide start menu when start button is clicked and to begin timer countdown

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Last Edited 2023/07/29
 
     <div class = "header">
 
-        <div id = "timer">Time: 0</div>
+        <div id = "timer">Time: 60</div>
         <div id = "HSLink">View high scores</div>
 
     </div>
@@ -36,7 +36,7 @@ Last Edited 2023/07/29
 
             <h1>Timed Coding Quiz</h1>
             <p>See how quickly you can answer the following code-related questions. Note that incorrect answers will result in a 10-second time loss!</p>
-            <button class = "quiz-button">Start Quiz</button> 
+            <button id = "start-button" class = "quiz-button">Start Quiz</button> 
 
         </div>
 
