--- a/index.html
+++ b/index.html
@@ -32,11 +32,25 @@ Last Edited 2023/07/29
 
     <div id = "quiz-content">
 
-        <div id = "start-menu">
+        <div id = "start-menu" class = "quiz-section-block">
 
             <h1>Timed Coding Quiz</h1>
             <p>See how quickly you can answer the following code-related questions. Note that incorrect answers will result in a 10-second time loss!</p>
             <button id = "start-button" class = "quiz-button">Start Quiz</button> 
+
+        </div>
+
+        <div id = "question-content" class = "quiz-section-block">
+
+            <h1 id = "question-title">Commonly used data types do NOT include:</h1>
+            <ol id = "answer-options">
+
+                <button id = "option-1" class = quiz-button><li>hi</li></button>
+                <button id = "option-2" class = quiz-button><li>pee</li></button>
+                <button id = "option-3" class = quiz-button><li>poo</li></button>
+                <button id = "option-4" class = quiz-button><li>pooop!</li></button>
+
+            </ol>
 
         </div>
 
