added question titles and multiple choice options for 5 questions

--- a/index.html
+++ b/index.html
@@ -42,18 +42,16 @@ Last Edited 2023/07/29
 
         <div id = "question-content" class = "quiz-section-block">
 
-            <h1 id = "question-title">Commonly used data types do NOT include:</h1>
+            <h1 id = "question-title"></h1>
             <ol id = "answer-options">
 
-                <button id = "option-1" class = quiz-button><li>hi</li></button>
-                <button id = "option-2" class = quiz-button><li>pee</li></button>
-                <button id = "option-3" class = quiz-button><li>poo</li></button>
-                <button id = "option-4" class = quiz-button><li>pooop!</li></button>
+                <button id = "option-1" class = quiz-button><li></li></button>
+                <button id = "option-2" class = quiz-button><li></li></button>
+                <button id = "option-3" class = quiz-button><li></li></button>
+                <button id = "option-4" class = quiz-button><li></li></button>
 
             </ol>
-
         </div>
-
     </div>
 
     <script src = "./assets/script.js"></script>
