started adding code for quiz content flow, added correct / wrong message when choosing an answer

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Last Edited 2023/07/29
 
     <div class = "header">
 
-        <div id = "timer">Time: 60</div>
+        <div id = "timer">Time: 75</div>
         <div id = "HSLink">View high scores</div>
 
     </div>
@@ -52,6 +52,14 @@ Last Edited 2023/07/29
 
             </ol>
         </div>
+
+        <div>
+
+            <h2 id = "correct">Correct!</h2>
+            <h2 id = "wrong">Wrong!</h2>
+
+        </div>
+
     </div>
 
     <script src = "./assets/script.js"></script>
