added high score submission menu

--- a/index.html
+++ b/index.html
@@ -53,13 +53,22 @@ Last Edited 2023/07/29
             </ol>
         </div>
 
+        <div id = "high-score-submission" class = "quiz-section-block">
+
+            <h1>All done!</h1>
+            <p id = "final-score"></p>
+            <p>Enter initials:</p>
+            <input type = "text">
+            <button id = "submit-button" class = "quiz-button">Submit</button>
+
+        </div>
+
         <div>
 
             <h2 id = "correct">Correct!</h2>
             <h2 id = "wrong">Wrong!</h2>
 
         </div>
-
     </div>
 
     <script src = "./assets/script.js"></script>
