added code to submit user high score and initials to local storage

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Last Edited 2023/07/29
         <div id = "high-score-submission" class = "quiz-section-block">
 
             <h1>All done!</h1>
-            <p id = "final-score">Your final score is 22</p>
+            <p id = "final-score"></p>
             <p class = "submit-row">Enter initials:</p>
             <input class = "submit-row" type = "text">
             <button id = "submit-button" class = "quiz-button submit-row">Submit</button>
