added code to render high scores from local storage

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Last Edited 2023/07/29
 
         </div>
 
-        <div id = "high-score-display-menu" class = "quiz-section-block">
+        <div id = "high-scores-display-box" class = "quiz-section-block">
 
             <h1 class = "high-score-header">High scores</h1>
             <ol id = high-scores-display></ol>
